<?xml version="1.0"?>
<package format="3">
  <name>geo_transformer</name>
  <version>0.0.1</version>
  <description>Node for GeographicLib-based coordinate conversions</description>
  <maintainer email="arora8715@gmail.com">ashok</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geo_transformer_interfaces</depend>
  <depend>libgeographic-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
