<?xml version="1.0"?>
<package format="3">
  <name>geo_transformer_interfaces</name>
  <version>0.0.1</version>
  <description>Service definitions for geo_transformer</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  
  <depend>builtin_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>